tests/shouldFail/restrict.c
restrict int f();

int main(void){

}
